--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -251,7 +251,7 @@
   }
 
   @media (min-width: $desk) {
-    grid-template-columns: 1fr 201px;
+    grid-template-columns: 446px 201px;
     width: 775px;
     padding: 0 48px 35px 50px;
   }
