--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -54,6 +54,7 @@
 
 .news__tab {
   width: fit-content;
+  max-width: 200px;
   padding: 11px 15px 9px 14px;
   font-size: 12px;
   font-style: normal;
@@ -286,6 +287,7 @@
 .news__date {
   order: -2;
   width: fit-content;
+  max-width: 50%;
   padding: 13px 12px 5px 0;
   font-size: 12px;
   font-style: normal;
